# faker

./: CMakeLists.txt  faker.hpp
cspec/namespaces/faker/: lorem_spec.cpp  sequence_spec.cpp
src/: faker.cpp
